add station y ambientes
