# app/Http/Requests/StationRequest/IndexStationRequest.php
@@ -1,0 +1,37 @@
+<?php
+
+namespace App\Http\Requests\StationRequest;
+
+use App\Http\Requests\IndexRequest;
+
+class IndexStationRequest extends IndexRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, mixed>
+     */
+    public function rules(): array
+    {
+        return [
+
+            'name' => 'nullable|string',
+            'type' => 'nullable|string',
+
+            'status' => 'nullable|string',
+
+            'environment$name' => 'nullable|string',
+
+        ];
+    }
+}
