# app/Models/Station.php
@@ -1,0 +1,57 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\SoftDeletes;
+
+class Station extends Model
+{
+    use SoftDeletes;
+    protected $fillable = [
+        'id',
+        'name',
+        'description',
+       'route',
+
+        'status',
+        'server_id',
+        
+        'environment_id',
+        'created_at',
+        'updated_at',
+        'deleted_at',
+    ];
+    protected $hidden = [
+
+        'created_at',
+        'updated_at',
+        'deleted_at',
+    ];
+    const filters = [
+        'name'=> 'like',
+        'status'=> 'like',
+        'environment.name' => 'like',
+    ];
+
+    /**
+     * Campos de ordenación disponibles.
+     */
+    const sorts = [
+        'id' => 'desc',
+        'name' => 'desc',
+        'description' => 'desc',
+
+    ];
+
+    public function environment()
+    {
+        return $this->belongsTo(Environment::class,'environment_id');
+    }
+
+    public function stations()
+    {
+        return $this->hasMany(Station::class);
+    }
+}
